oxiplate-derive/tests/broken/numbers/unexpected-suffix-lowercase.stderr
error: Unexpected suffix
 --> tests/broken/numbers/unexpected-suffix-lowercase.rs:4:23
  |
4 | #[oxiplate_inline("{{ 0not_supported }}")]
  |                       ^^^^^^^^^^^^^^
